[package]
name = "kamura-operator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
sayaka = { path = "../sayaka" }
kamura-core = { path = "../kamura-core" }
redis = "0.26.1"
chrono = "0.4.38"
colored = "2.1.0"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
