[package]
name = "kamura-runner"
version = "0.2.0"
edition.workspace = true
authors.workspace = true

[dependencies]
sayaka = { path = "../sayaka" }
redis = "0.26.1"
colored = "2.1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.38"