[package]
name = "kamura"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
sayaka = { path = "../sayaka" }
kamura-runner = { path = "../kamura-runner" }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
