[package]
name = "kamura"
version = "0.3.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
sayaka = { path = "../sayaka" }
kamura-core = { path = "../kamura-core" }
kamura-operator = { path = "../kamura-operator" }
kamura-runner = { path = "../kamura-runner" }
kamura-integrator = { path = "../kamura-integrator" }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["set-header", "cors"] }
chrono = "0.4.38"
serde_json = "1.0.127"
md5 = "0.7.0"
